v2.1.2
----------------------------------------------------------------------------------------------------
 * Refactoring the initialization to distinguish between VirtualHost definitions that have 
   SSLEngine on and those who do not. The advantages are:
   - No MDPortMap definition is necessary to detect where SSL certificates are needed.
   - mod_md will only collect ServerName/ServerAlias from VirtualHosts that use SSL.
   - One can have a 'catch-all' VirtualHost on port 80 using all domains without them 
     bleeding back into the MD definitions.
 * Initialization no longer traverses the complete md store, reads configured MD JSON
   files only once and writes them only when changed. When a new MD is added or
   an existing one renamed (the first domain member changes), will the store be searched
   for old definitions and certificates. This search only looks at MDs outside the current
   set and should remain efficient with many MDs configured.
   Example: if you have 100 MDs and rename 1, mod_md will see the 99 directories that stayed
   and load the one unmatched to check for a rename.
   

v2.1.1
----------------------------------------------------------------------------------------------------
 * Fixed a bug where the "acme-tls/1" protocol setting was not recognized on the base server
   (with "MDBaseServer on").
 * ACME errors returned during account creation are now added to the job log.
 * A missing ServerAdmin is now properly logged at the renewal job.

v2.1.0
----------------------------------------------------------------------------------------------------
 * fixed a crash in "server-status" handler when stapling was enabled but not status information
   could be found.
 * toning down some INFO level logging to DEBUG or lower.
 * new directive 'MDCertificateMonitor' to allow configuration of the check HTML links rendered
   in the server-status page.
 * server-status timestamps now in a better readable format. Some columns have been merged.